✨ Stream new blocs & txs on websocket (#1102)
Co-authored-by: Alexandre Careil <alex.careil.fr@gmail.com>
Co-authored-by: Alexandre Careil <hhalex@users.noreply.github.com>

--- a/src/utils/conf_defaults.toml
+++ b/src/utils/conf_defaults.toml
@@ -60,3 +60,11 @@ solo = true
 stakers = {}
 
 faucet_password = "password"
+
+[websocket]
+enabled = true
+server_port = 8080
+ws_path = "/ws"
+health_path = "/ws_health"
+peer_check_interval = 100
+events = ["node_state", "new_block", "new_tx"]
