--- a/crates/hyle-model/Cargo.toml
+++ b/crates/hyle-model/Cargo.toml
@@ -24,7 +24,7 @@ sqlx = { version = "0.8.4", features = ["postgres"], optional = true }
 serde_with = { version = "3.12.0", features = ["hex"], optional = true }
 serde_json = { version = "1", optional = true }
 utoipa = { version = "5.3.1", optional = true }
-sha2 = { version = "=0.10.8", optional = true }                          # precompile patched at workspace root
+sha2 = { version = "=0.10.8", optional = true }
 secp256k1 = { version = "0.31.0", optional = true }
 strum = "0.27.1"
 
