--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -26,7 +26,7 @@ serde = { version = "1.0", default-features = false, features = [
   "alloc",
 ] }
 anyhow = "1.0.98"
-sha2 = "=0.10.8" # precompile patched at workspace root
+sha2 = "=0.10.8"
 borsh = { version = "1.5.6", features = ["derive"] }
 serde_with = "3.12.0"
 
