--- a/Cargo.toml
+++ b/Cargo.toml
@@ -192,7 +192,7 @@ default = []
 
 turmoil = ["hyle-net/turmoil", "client-sdk/turmoil"]
 
-sp1 = ["hyle-verifiers/sp1"]
+sp1 = ["hyle-verifiers/sp1", "client-sdk/sp1"]
 
 # Disable dependency keyring by default, as it requires libdbus
 keyring = ["hyle-crypto/keyring"]
