--- a/crates/hyle-modules/Cargo.toml
+++ b/crates/hyle-modules/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hyle-client-sdk"
-description = "Hyle client SDK"
-license = "MIT"
+name = "hyle-modules"
+description = "Collection of Hyle Modules"
+license-file = { workspace = true }
 version = { workspace = true }
 edition = { workspace = true }
 homepage = { workspace = true }
@@ -10,14 +10,21 @@ rust-version = { workspace = true }
 
 [dependencies]
 sdk = { workspace = true, default-features = false, features = ["full-model"] }
-bonsai-runner = { workspace = true, optional = true }
+hyle-crypto = { workspace = true }
+client-sdk = { workspace = true, features = ["rest", "indexer"] }
 hyle-net = { workspace = true }
+hyle-verifiers = { workspace = true }
 
 anyhow = "1.0.98"
 borsh = "1.5.6"
 serde = "1.0"
 serde_json = { version = "1" }
 tracing = "0.1"
+strum_macros = "0.27.1"
+serde_with = "3.12.0"
+config = { version = "0.15.9", default-features = false, features = ["toml"] }
+sha3 = "0.10.8"
+assertables = { version = "9.5.2" }
 anymap = { version = "0.12.1" }
 syn = { version = "2.0.101" }
 quote = { version = "1.0.39" }
@@ -30,19 +37,14 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
   "json",
 ] }
 paste = { version = "1.0.15" }
+hex = "0.4.3"
 
-risc0-zkvm = { version = "2.0.2", default-features = false, optional = true }
-sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
-bincode = { version = "1.3.3", optional = true }
-
-
-# Tcp feature
-tokio = { version = "1.44.2", features = ["full", "tracing"], optional = true }
-
-# Indexer feature, these are re-exported
-axum = { version = "0.8.4", optional = true }
-utoipa = { version = "5.3.1", optional = true }
-utoipa-axum = { version = "0.2.0", optional = true }
+bytes = { version = "1.10.0" }
+tokio = { version = "1.44.2", features = ["full", "tracing"] }
+tokio-util = { version = "0.7.14" }
+axum = { version = "0.8.4", features = ["ws"] }
+utoipa = { version = "5.3.1" }
+utoipa-axum = { version = "0.2.0" }
 
 [dev-dependencies]
 tempfile = "3.19.1"
@@ -52,11 +54,5 @@ test-log = { version = "0.2.17", features = [
 ], default-features = false }
 
 [features]
-turmoil = ["hyle-net/turmoil"]
-rest = []
-indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
-risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
-sp1 = ["dep:sp1-sdk", "dep:bincode"]
-
-[package.metadata.docs.rs]
-all-features = true
+risc0 = ["client-sdk/risc0"]
+sp1 = ["client-sdk/sp1"]
