--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -32,6 +32,7 @@ hyper-util = "0.1.10"
 serde = "1.0.219"
 axum = "0.8.3"
 tower-service = "0.3.3"
+opentelemetry = "0.28.0"
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["std"] }
