--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -16,12 +16,14 @@ serde_json = { version = "1.0.140", optional = true }
 anyhow = "1.0.98"
 borsh = "1.5.6"
 rand = { version = "0.9" }
-risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std"] }
 tracing = "0.1"
 hex = "0.4.3"
 sha3 = { version = "0.10.8" }
 secp256k1 = { version = "0.31.0" }
 
+risc0-zkvm = { version = "2.0.2", default-features = false, features = [
+  "std",
+], optional = true }
 sp1-sdk = { version = "4.1.3", default-features = false, optional = true }
 bincode = { version = "1.3.3", optional = true }
 
@@ -33,4 +35,5 @@ test-log = { version = "0.2.17", features = [
 
 [features]
 default = []
+risc0 = ["dep:risc0-zkvm"]
 sp1 = ["dep:sp1-sdk", "dep:bincode", "serde_json"]
