--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -32,6 +32,13 @@ axum = { version = "0.8.4", optional = true }
 utoipa = { version = "5.3.1", optional = true }
 utoipa-axum = { version = "0.2.0", optional = true }
 
+[dev-dependencies]
+tempfile = "3.19.1"
+test-log = { version = "0.2.17", features = [
+  "color",
+  "trace",
+], default-features = false }
+
 [features]
 turmoil = ["hyle-net/turmoil"]
 rest = []
