--- a/Cargo.toml
+++ b/Cargo.toml
@@ -137,22 +137,20 @@ sqlx = { version = "0.8.4", features = [
 ] }
 tokio = { version = "1.44.2", features = ["full", "tracing"] }
 tokio-util = { version = "0.7.14" }
-tower-http = { version = "0.6.2", features = ["trace", "cors"] }
+# tower-http = { version = "0.6.2", features = ["trace", "cors"] }
 fjall = { version = "2.10.0" }
 
 dhat = { version = "0.3.3", optional = true }
 utoipa = { version = "5.3.1", features = ["axum_extras"] }
-utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 utoipa-axum = { version = "0.2.0" }
 testcontainers-modules = { version = "0.12.0", features = ["postgres"] }
 toml = "0.8.22"
 
 # We force zip version here as later version is not compatible with utoipa-swagger-ui
 zip = "=2.3.0"
-serde_with = "3.12.0"
 seq-macro = "0.3.6"
 [package.metadata.cargo-machete]
-ignored = ["zip"]
+ignored = ["zip", "bytes", "tokio-util"]
 
 [patch.crates-io]
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
