--- a/crates/bonsai-runner/Cargo.toml
+++ b/crates/bonsai-runner/Cargo.toml
@@ -19,6 +19,7 @@ hex = "0.4.3"
 borsh = "1.5.6"
 
 bonsai-sdk = { version = "1.2.4", features = ["non_blocking"] }
+boundless-market = "0.7.0"
 hyle-net = { workspace = true }
 risc0-zkvm = { version = "2.0.2" }
 bytemuck = "1.23.0"
