--- a/crates/hyle-verifiers/Cargo.toml
+++ b/crates/hyle-verifiers/Cargo.toml
@@ -20,6 +20,7 @@ tracing = "0.1"
 hex = "0.4.3"
 sha3 = { version = "0.10.8" }
 secp256k1 = { version = "0.31.0" }
+once_cell = { version = "1.19.0", optional = true }
 
 risc0-zkvm = { version = "2.0.2", default-features = false, features = [
   "std",
@@ -36,4 +37,4 @@ test-log = { version = "0.2.17", features = [
 [features]
 default = []
 risc0 = ["dep:risc0-zkvm"]
-sp1 = ["dep:sp1-sdk", "dep:bincode", "serde_json"]
+sp1 = ["dep:sp1-sdk", "dep:bincode", "dep:serde_json", "dep:once_cell"]
