--- a/crates/hyle-net/Cargo.toml
+++ b/crates/hyle-net/Cargo.toml
@@ -24,6 +24,7 @@ futures = { version = "0.3.31" }
 turmoil = { version = "0.6.6", optional = true }
 
 bytes = { version = "1.10.0" }
+hex = { version = "0.4.3" }
 paste = { version = "1.0.15" }
 serde_json = "1.0.140"
 http-body-util = "0.1.3"
