--- a/.github/docker/Dockerfile.base
+++ b/.github/docker/Dockerfile.base
@@ -1,8 +1,9 @@
-FROM rust:alpine AS builder
-RUN apk add gcc musl-dev g++
-RUN cargo install --version 2.0.0 risc0-r0vm
+FROM rust:slim-bookworm AS builder
+RUN apt-get update && apt-get -y install curl
+RUN curl -L https://risczero.com/install | bash
+RUN /root/.risc0/bin/rzup install r0vm 2.0.2
 
-FROM ubuntu:24.04
+FROM debian:12-slim
 COPY --from=builder /usr/local/cargo/bin/r0vm /usr/local/bin/r0vm
 
 # installing Barrenteberg CLI
