--- a/crates/contracts/risc0-recursion/Cargo.toml
+++ b/crates/contracts/risc0-recursion/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hyle-risc0-recursion"
-description = "Hyle Smart Contract"
+description = "Hyli Smart Contract"
 license-file = { workspace = true }
 version = { workspace = true }
 edition = { workspace = true }
