--- a/crates/bonsai-runner/Cargo.toml
+++ b/crates/bonsai-runner/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hyle-bonsai-runner"
-description = "Hyle async lib to use risc0 bonsai"
+description = "Hyli async lib to use risc0 bonsai"
 license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
