--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hyle-client-sdk"
-description = "Hyle client SDK"
+description = "Hyli client SDK"
 license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
