--- a/crates/contracts/smt-token/Cargo.toml
+++ b/crates/contracts/smt-token/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hyle-smt-token"
-description = "Hyle Smart Contract"
+description = "Hyli Smart Contract"
 license = "MIT"
 version = { workspace = true }
 edition = { workspace = true }
