💚 Fix build docker image

--- a/.github/docker/Dockerfile.base
+++ b/.github/docker/Dockerfile.base
@@ -11,3 +11,4 @@ RUN apt-get update && apt-get install -y curl bash
 RUN curl -L https://raw.githubusercontent.com/AztecProtocol/aztec-packages/refs/heads/master/barretenberg/bbup/install | bash
 ENV PATH="/root/.bb:$PATH"
 RUN bbup -v 0.82.2
+RUN apt-get install -y libssl-dev
